--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -143,6 +143,12 @@ on property:sys.boot_completed=1
     write /dev/sys/fs/by-name/userdata/data_io_flag 8
     write /dev/sys/fs/by-name/userdata/node_io_flag 8
 
+    # Setup runtime blkio
+    write /dev/blkio/blkio.weight 1000
+    write /dev/blkio/background/blkio.weight 200
+    write /dev/blkio/blkio.group_idle 2000
+    write /dev/blkio/background/blkio.group_idle 0
+
     # First initialize silver only cpus
     write /dev/cpuset/audio-app/cpus 0-3
     write /dev/cpuset/background/cpus 0-2
