--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -29,6 +29,10 @@
 
 import /vendor/etc/init/init.mi_thermald.rc
 
+on early-init
+    # Disable EAS
+    write /proc/sys/kernel/sched_energy_aware 0
+
 on init
     wait /dev/block/platform/soc/1d84000.ufshc
     symlink /dev/block/platform/soc/1d84000.ufshc /dev/block/bootdevice
